--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,8 +17,8 @@
                         <a href="/register" class="btn btn-primary btn-register">新規登録</a>
                     </div>
                     <div class="form-group">
-                        <label for="email">メールアドレス</label>
-                        <input type="text" name="email" id="email" class="form-control">
+                        <label for="username">アカウント名</label>
+                        <input type="text" name="username" id="username" class="form-control">
                     </div>
                     <div class="form-group">
                         <label for="password">パスワード</label>
