--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,10 +1,47 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <title>Thymeleaf で出力しますよ</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Horus イベント管理システム</title>
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/css/app.css}" rel="stylesheet">
 </head>
-<body>
-    <p th:text="'こんにちは, ' + ${name} + 'さん!'" />
+
+<body class="page-register">
+    <main>
+        <div class="container">
+            <div class="register-form">
+                <h1 class="page-title">新規登録</h1>
+                <form method="POST" th:action="@{/register}">
+                    <div class="form-group">
+                        <label for="email">名前</label>
+                        <input type="text" name="fullName" id="fullName" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="username">アカウント名</label>
+                        <input type="text" name="username" id="username" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">パスワード</label>
+                        <input type="password" name="password" class="form-control" id="password">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">メールアドレス</label>
+                        <input type="text" name="emailAddress" id="emailAddress" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">電話番号</label>
+                        <input type="text" name="phone" id="phone" class="form-control">
+                    </div>
+                    <div class="action-buttons">
+                        <button type="submit" class="btn btn-primary">新規登録</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- FOOTER -->
+    </main>
 </body>
+
 </html>
