--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="action-buttons">
                         <button type="submit" class="btn btn-primary">登録</button>
-                        <a href="/reset" class="btn btn-secondary">パスワードをお忘れですか？</a>
+                        <a href="/forget" class="btn btn-secondary">パスワードをお忘れですか？</a>
                     </div>
                 </form>
             </div>
