--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -79,32 +79,33 @@ a {
   margin-right: 10px;
 }
 
-.page-login {
+.page-login,
+.page-forget {
   display: flex;
   height: 100vh;
   align-items: center;
   justify-content: center;
 }
-
-.page-login .form-group {
+.page-login .form-group,
+.page-forget .form-group {
   margin-top: 10px;
 }
-
-.page-login .action-buttons {
+.page-login .action-buttons,
+.page-forget .action-buttons {
   display: flex;
   margin-top: 30px;
   justify-content: center;
 }
-
-.page-login .action-buttons .btn-primary {
+.page-login .action-buttons .btn-primary,
+.page-forget .action-buttons .btn-primary {
   margin-right: 10px;
 }
-
-.page-login .action-button {
+.page-login .action-button,
+.page-forget .action-button {
   text-align: center;
 }
-
-.page-login .action-button .btn {
+.page-login .action-button .btn,
+.page-forget .action-button .btn {
   display: inline-block;
   margin-top: 10px;
 }
