Implemented reset password function

--- a/src/main/resources/templates/account/resetPassword.html
+++ b/src/main/resources/templates/account/resetPassword.html
@@ -15,8 +15,8 @@
                 <h1 class="page-title">パスワード再設定</h1>
                 <form method="POST" th:action="@{/reset}">
                     <div class="form-group">
-                        <label for="username">アカウント名</label>
-                        <input type="text" name="username" value="" id="username" disabled class="form-control">
+                        <label for="resetCode">リセットコード</label>
+                        <input type="text" name="resetCode" th:value="${resetCode.code}" id="resetCode" class="form-control">
                     </div>
                     <div class="form-group">
                         <label for="passowrd">新しいパスワード</label>
